# Zygisk-ImGui-Mod-Menu

./: .gitignore  LICENSE.txt  build.gradle  module.gradle
module/: build.gradle
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  draw.h  esp-draw.h  esp-manager.h  esp.h  game-utils.cpp  game-utils.h  game.h  globals.cpp  globals.h  hack.cpp  hack.h  il2cpp-hook.cpp  il2cpp-hook.h  il2cpp_hook.cpp  il2cpp_hook.h  loader.cpp  loader.h  log.h  main.cpp  menu-data.cpp  menu-data.h  menu-input.cpp  menu-input.h  menu-utils.h  menu-value.cpp  menu-value.h  menu.h  reserved-data.cpp  reserved-data.h
module/src/main/cpp/dobby/: CMakeLists.txt
module/src/main/cpp/dobby/include/: dobby.h
module/src/main/cpp/il2cpp/: il2cpp-dumper.cpp  il2cpp-dumper.h  il2cpp-hook.cpp  il2cpp-hook.h  il2cpp-resolver.cpp  il2cpp-resolver.h  il2cpp-structs.h  il2cpp.cpp  il2cpp.h  il2cpp_hook.cpp  il2cpp_hook.h
module/src/main/cpp/il2cpp/src/: il2cpp-api-functions.h  il2cpp-class.h
module/src/main/cpp/menu/: menu-config.h  menu-input.h  menu.cpp  menu.h  menu_draw.h
module/src/main/cpp/service/: service.cpp  service.h
